--- a/StockAnalysis/UserInfo/SetMoneyPasswordViewController.xib
+++ b/StockAnalysis/UserInfo/SetMoneyPasswordViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SetMoneyPasswordViewController">
             <connections>
+                <outlet property="lookPwdBtn" destination="hrv-ga-YiO" id="PXP-du-dO7"/>
                 <outlet property="moneyAgainPassword" destination="0bi-Kr-IN2" id="OT3-XQ-6aR"/>
                 <outlet property="moneyPassword" destination="ABM-d8-UCz" id="9aU-GT-K1f"/>
                 <outlet property="verifyInput" destination="fZa-jT-9MU" id="84j-dy-uww"/>
@@ -36,8 +37,8 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ABM-d8-UCz">
-                            <rect key="frame" x="112" y="12" width="205" height="30"/>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ABM-d8-UCz">
+                            <rect key="frame" x="112" y="18.5" width="205" height="17"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="205" id="B4y-RP-Xve"/>
                             </constraints>
@@ -45,16 +46,6 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hrv-ga-YiO">
-                            <rect key="frame" x="325" y="15" width="50" height="24"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="50" id="HiC-3p-Ihm"/>
-                            </constraints>
-                            <state key="normal" title="Button" image="eye-o"/>
-                            <connections>
-                                <action selector="clickLookPassword:" destination="-1" eventType="touchUpInside" id="B2s-PK-qr2"/>
-                            </connections>
-                        </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cR7-Om-cgR">
                             <rect key="frame" x="0.0" y="53" width="375" height="1"/>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -62,19 +53,30 @@
                                 <constraint firstAttribute="height" constant="1" id="2er-yU-mQc"/>
                             </constraints>
                         </view>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hrv-ga-YiO">
+                            <rect key="frame" x="331" y="23" width="21" height="12"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="21" id="HiC-3p-Ihm"/>
+                                <constraint firstAttribute="height" constant="12" id="JlD-Qn-lbs"/>
+                            </constraints>
+                            <state key="normal" title="Button" image="eye-c"/>
+                            <connections>
+                                <action selector="clickLookPassword:" destination="-1" eventType="touchUpInside" id="B2s-PK-qr2"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="QZs-vC-0zB" firstAttribute="leading" secondItem="pUX-LV-rYT" secondAttribute="leading" constant="25" id="1vS-ee-kI3"/>
                         <constraint firstItem="QZs-vC-0zB" firstAttribute="centerY" secondItem="pUX-LV-rYT" secondAttribute="centerY" id="Btm-gJ-mfm"/>
-                        <constraint firstAttribute="trailing" secondItem="hrv-ga-YiO" secondAttribute="trailing" id="La9-xQ-qge"/>
+                        <constraint firstAttribute="trailing" secondItem="hrv-ga-YiO" secondAttribute="trailing" constant="23" id="La9-xQ-qge"/>
                         <constraint firstAttribute="bottom" secondItem="cR7-Om-cgR" secondAttribute="bottom" constant="1" id="NaB-gm-1Qm"/>
                         <constraint firstItem="cR7-Om-cgR" firstAttribute="leading" secondItem="pUX-LV-rYT" secondAttribute="leading" id="QK0-Hm-1zy"/>
                         <constraint firstItem="ABM-d8-UCz" firstAttribute="centerY" secondItem="pUX-LV-rYT" secondAttribute="centerY" id="Vri-7z-FsY"/>
                         <constraint firstItem="ABM-d8-UCz" firstAttribute="leading" secondItem="pUX-LV-rYT" secondAttribute="leading" constant="112" id="XdI-Nx-Xlu"/>
                         <constraint firstAttribute="trailing" secondItem="cR7-Om-cgR" secondAttribute="trailing" id="axh-fB-nqF"/>
                         <constraint firstAttribute="height" constant="55" id="sxg-0t-hEw"/>
-                        <constraint firstItem="hrv-ga-YiO" firstAttribute="centerY" secondItem="pUX-LV-rYT" secondAttribute="centerY" id="xbl-r6-DLl"/>
+                        <constraint firstItem="hrv-ga-YiO" firstAttribute="centerY" secondItem="pUX-LV-rYT" secondAttribute="centerY" constant="1.5" id="xbl-r6-DLl"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EKu-S2-TED" userLabel="再次输入">
@@ -90,8 +92,8 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0bi-Kr-IN2">
-                            <rect key="frame" x="112" y="12" width="205" height="30"/>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0bi-Kr-IN2">
+                            <rect key="frame" x="112" y="18.5" width="205" height="17"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="205" id="zTh-Ig-Tls"/>
                             </constraints>
@@ -99,16 +101,6 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5jG-BO-bA1">
-                            <rect key="frame" x="325" y="15" width="50" height="24"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="50" id="vT1-1q-K3G"/>
-                            </constraints>
-                            <state key="normal" title="Button" image="eye-o"/>
-                            <connections>
-                                <action selector="clickAgainPassword:" destination="-1" eventType="touchUpInside" id="O1A-9m-Gy6"/>
-                            </connections>
-                        </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EnY-Sy-3P2">
                             <rect key="frame" x="0.0" y="53" width="375" height="1"/>
                             <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -119,8 +111,6 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="5jG-BO-bA1" secondAttribute="trailing" id="1Rl-yD-Dmv"/>
-                        <constraint firstItem="5jG-BO-bA1" firstAttribute="centerY" secondItem="EKu-S2-TED" secondAttribute="centerY" id="Ljy-zb-03u"/>
                         <constraint firstItem="EnY-Sy-3P2" firstAttribute="leading" secondItem="EKu-S2-TED" secondAttribute="leading" id="U6q-zC-RGQ"/>
                         <constraint firstAttribute="trailing" secondItem="EnY-Sy-3P2" secondAttribute="trailing" id="UEY-SR-HZK"/>
                         <constraint firstItem="0bi-Kr-IN2" firstAttribute="centerY" secondItem="EKu-S2-TED" secondAttribute="centerY" id="WfO-cE-O5H"/>
@@ -144,8 +134,8 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fZa-jT-9MU">
-                            <rect key="frame" x="112" y="12" width="205" height="30"/>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fZa-jT-9MU">
+                            <rect key="frame" x="112" y="18.5" width="205" height="17"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="205" id="J0a-Tp-juS"/>
                             </constraints>
@@ -196,10 +186,10 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IjK-4A-Nd0">
-                    <rect key="frame" x="65" y="249" width="244" height="38"/>
+                    <rect key="frame" x="15" y="251" width="345" height="47"/>
                     <color key="backgroundColor" red="0.95458155870437622" green="0.72986036539077759" blue="0.17930501699447632" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="244" id="r4I-Vx-gz9"/>
+                        <constraint firstAttribute="height" constant="47" id="nQL-Ne-cN7"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="21"/>
                     <state key="normal" title="确认">
@@ -207,7 +197,7 @@
                     </state>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                            <integer key="value" value="20"/>
+                            <integer key="value" value="25"/>
                         </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="NO"/>
                     </userDefinedRuntimeAttributes>
@@ -221,16 +211,18 @@
                 <constraint firstItem="EKu-S2-TED" firstAttribute="top" secondItem="pUX-LV-rYT" secondAttribute="bottom" constant="-1" id="4Ga-gq-15P"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="pUX-LV-rYT" secondAttribute="trailing" id="74t-4w-P6l"/>
                 <constraint firstItem="nNH-Qg-1UH" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="DEa-oN-nCO"/>
+                <constraint firstItem="IjK-4A-Nd0" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="15" id="LCW-cG-aTQ"/>
                 <constraint firstItem="EKu-S2-TED" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="Qj9-mS-sMy"/>
                 <constraint firstItem="qVe-mr-nUp" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="180" id="QwL-QY-a3E"/>
                 <constraint firstItem="qVe-mr-nUp" firstAttribute="centerX" secondItem="Q5M-cg-NOt" secondAttribute="centerX" id="Sir-sr-WE1"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="nNH-Qg-1UH" secondAttribute="trailing" id="UVZ-Dr-7q5"/>
                 <constraint firstItem="nNH-Qg-1UH" firstAttribute="top" secondItem="EKu-S2-TED" secondAttribute="bottom" constant="-1" id="VLh-el-dfF"/>
                 <constraint firstItem="IjK-4A-Nd0" firstAttribute="centerX" secondItem="Q5M-cg-NOt" secondAttribute="centerX" id="YFM-Np-Jp8"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="IjK-4A-Nd0" secondAttribute="trailing" constant="15" id="gKS-G4-ffZ"/>
                 <constraint firstItem="pUX-LV-rYT" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="mLP-XL-sTK"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="EKu-S2-TED" secondAttribute="trailing" id="n5J-j4-b2a"/>
                 <constraint firstItem="pUX-LV-rYT" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="pVD-SB-JzS"/>
-                <constraint firstItem="IjK-4A-Nd0" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="229" id="qMc-WV-oqz"/>
+                <constraint firstItem="IjK-4A-Nd0" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="231" id="qMc-WV-oqz"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <userDefinedRuntimeAttributes>
@@ -243,6 +235,6 @@
         </view>
     </objects>
     <resources>
-        <image name="eye-o" width="32" height="24"/>
+        <image name="eye-c" width="43" height="24"/>
     </resources>
 </document>
