--- a/StockAnalysis/UserInfo/UserInfoViewController.xib
+++ b/StockAnalysis/UserInfo/UserInfoViewController.xib
@@ -56,6 +56,9 @@
                             <state key="normal" title="切换账号">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
+                            <connections>
+                                <action selector="clickSwitchAccount:" destination="-1" eventType="touchUpInside" id="fCZ-12-TWA"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" red="0.14509803921568629" green="0.17254901960784313" blue="0.19607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
