--- a/StockAnalysis/UserInfo/UserManagerViewController.xib
+++ b/StockAnalysis/UserInfo/UserManagerViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UserManagerViewController">
             <connections>
+                <outlet property="accountList" destination="JWj-Po-Ocb" id="lZB-41-vft"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,25 +21,25 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JWj-Po-Ocb">
+                    <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ZEDA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LKV-b3-yKe">
-                    <rect key="frame" x="16" y="20" width="44" height="21"/>
+                    <rect key="frame" x="16" y="35" width="44" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JWj-Po-Ocb">
-                    <rect key="frame" x="0.0" y="49" width="375" height="618"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </tableView>
             </subviews>
             <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="JWj-Po-Ocb" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="29" id="2ad-U9-HhV"/>
+                <constraint firstItem="JWj-Po-Ocb" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="44" id="2ad-U9-HhV"/>
                 <constraint firstItem="JWj-Po-Ocb" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="7So-lT-DWt"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="JWj-Po-Ocb" secondAttribute="bottom" id="JDP-jS-DB2"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="JWj-Po-Ocb" secondAttribute="trailing" id="P78-l7-hmj"/>
                 <constraint firstItem="LKV-b3-yKe" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="16" id="l2c-mB-c0g"/>
-                <constraint firstItem="LKV-b3-yKe" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="zYu-ol-Tyg"/>
+                <constraint firstItem="LKV-b3-yKe" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="15" id="zYu-ol-Tyg"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="33.5" y="116.5"/>
